fixes overflow

--- a/src/audiotool/Player.sass
+++ b/src/audiotool/Player.sass
@@ -1,11 +1,12 @@
-$PlaceHolderColor: #111
+@import common
 
 component
   top: 0
   position: sticky
   flex: 0 0 8em
   padding: 0 1em
-  display: flex
+  display: grid
+  grid-template-columns: 6em 1fr
   width: 100%
   column-gap: 1em
   background-color: black
@@ -25,25 +26,21 @@ component
       background-color: $PlaceHolderColor
 
   > div.names
-    flex: 1 0 0
     display: flex
     flex-direction: column
     justify-content: center
     row-gap: 0.25em
     font-size: 1.5em
+    overflow: hidden
+
+    > div
+      height: 1.25em
+
+      &:empty
+        background-color: $PlaceHolderColor
 
     > div.track
-      height: 1.25em
       color: white
-
-      &:empty
-        background-color: $PlaceHolderColor
-
-    > div.collaborators
-      height: 1.25em
-
-      &:empty
-        background-color: $PlaceHolderColor
-
-      > a
-        text-decoration: none
+      white-space: nowrap
+      overflow: hidden
+      text-overflow: ellipsis
