--- a/src/audiotool/TrackList.sass
+++ b/src/audiotool/TrackList.sass
@@ -1,6 +1,7 @@
-@import ./icons
+@import ./common
+
 component
-  margin: 8em auto
+  margin: 2em auto
   width: auto
   max-width: max-content
   display: grid
@@ -69,18 +70,6 @@ component
       flex-direction: column
       justify-content: center
       padding: 0 2em 0 0
-
-      > .collaborators
-        white-space: nowrap
-        overflow: hidden
-        text-overflow: ellipsis
-
-        > a
-          width: max-content
-          text-decoration: none
-
-          &:not(:last-child):after
-            content: ", "
 
     > .genre
       width: 100%
